--- a/pom.xml
+++ b/pom.xml
@@ -30,9 +30,7 @@
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
-            <!-- existing dependencies ... -->
-
-        <!-- Spring Security starter: provides authentication, authorization, and security infrastructure for Spring Boot applications -->
+            <!-- Spring Security starter: provides authentication, authorization, and security infrastructure for Spring Boot applications -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
@@ -100,6 +98,13 @@
 			<groupId>org.springframework.restdocs</groupId>
 			<artifactId>spring-restdocs-mockmvc</artifactId>
 			<scope>test</scope>
+		</dependency>
+
+		<!-- Swagger/OpenAPI Documentation -->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.3.0</version>
 		</dependency>
 	</dependencies>
 
