--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,15 +1,15 @@
 # Application properties for testing with Docker PostgreSQL
 # Uses Docker service name for database connection
 
-# PostgreSQL Configuration - Docker Network
-spring.datasource.url=jdbc:postgresql://postgres-db:5432/digital_logistics
+# PostgreSQL Configuration - Docker Network (use 'my-postgres' container name)
+spring.datasource.url=jdbc:postgresql://my-postgres:5432/digital_logistics
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.username=${postgres:postgres}
-spring.datasource.password=${1234:postgres}
+spring.datasource.username=postgres
+spring.datasource.password=1234
 
 # JPA Configuration
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 
