--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,8 +34,8 @@ services:
     networks:
       - jenkins-network
     volumes:
+      - /home/yassine/.docker/desktop/docker.sock:/var/run/docker.sock
       - jenkins-data:/var/jenkins_home
-      - /var/run/docker.sock:/var/run/docker.sock
     depends_on:
       my-postgres:
         condition: service_healthy
