--- a/pom.xml
+++ b/pom.xml
@@ -156,6 +156,11 @@
                         <goals>
                             <goal>prepare-agent</goal>
                         </goals>
+                        <configuration>
+
+                            <excludes>**/</excludes>
+
+                        </configuration>
                     </execution>
                     <execution>
                         <id>report</id>
