--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,25 +1,14 @@
-# Ap plication properties for testing with Docker PostgreSQL
-# Uses Docker service name for database connection
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
 
-# PostgreSQL Configuration - Docker Network (use 'my-postgres' container name)
-spring.datasource.url=jdbc:postgresql://my-postgres:5432/digital_logistics
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.username=postgres
-spring.datasource.password=1234
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
 
-# JPA Configuration
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.format_sql=false
+spring.h2.console.enabled=true
 
-# Connection Pool Settings
-spring.datasource.hikari.maximum-pool-size=5
-spring.datasource.hikari.minimum-idle=2
-spring.datasource.hikari.connection-timeout=20000
-
-# Disable unnecessary features during tests
-spring.jpa.open-in-view=false
-logging.level.org.hibernate=WARN
-logging.level.org.springframework.web=WARN
-logging.level.com.logistic=INFO
+# ? JWT (TEST ONLY)
+jwt.secret=test-secret-key-123456789234234234234234234
+jwt.expiration=3600000
