--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 spring.application.name=digitale_logistic
-spring.datasource.url=jdbc:postgresql://localhost:5432/digital_logistics
+spring.datasource.url=jdbc:postgresql://my-postgres:5432/digital_logistics
 spring.datasource.username=postgres
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.password=${DB_PASSWORD}
 jwt.secret=${JWT_SECRET}
+
+
+
