--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,39 +1,46 @@
+version: "3.9"
+
 services:
   spring-app:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: digitale-logistic-app
+    container_name: spring-app
     depends_on:
-      my-postgres:
+      postgres:
         condition: service_healthy
     environment:
-      DB_PASSWORD: 1234
-      JWT_SECRET: superSecretKey
+      - SPRING_PROFILES_ACTIVE=docker
+
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/digital_logistics
+      - SPRING_DATASOURCE_USERNAME=postgres
+      - SPRING_DATASOURCE_PASSWORD=1234
+
+      - JWT_SECRET=superSecretKeyThatIsLongEnoughForHS256AlgorithmAndMustBeAtLeast256BitsLong12345
     ports:
       - "9090:8080"
     networks:
       - jenkins-network
-
-  my-postgres:
+  postgres:
     image: postgres:17
-    container_name: my-postgres
     environment:
       POSTGRES_DB: digital_logistics
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: 1234
     ports:
       - "5432:5432"
-    networks:
-      - jenkins-network
     volumes:
       - postgres-data:/var/lib/postgresql/data
+    networks:
+      - jenkins-network
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   jenkins:
     image: jenkins/jenkins:lts
-    container_name: my-jenkins
     privileged: true
     user: root
     environment:
@@ -41,15 +48,14 @@ services:
     ports:
       - "9091:8080"
       - "50000:50000"
-    networks:
-      - jenkins-network
     volumes:
       - jenkins-data:/var/jenkins_home
       - /var/run/docker.sock:/var/run/docker.sock
+    networks:
+      - jenkins-network
 
   sonarqube:
     image: sonarqube:community
-    container_name: sonarqube
     environment:
       - SONAR_ES_BOOTSTRAP_CHECKS_DISABLE=true
     ports:
@@ -60,23 +66,33 @@ services:
       - sonarqube-extensions:/opt/sonarqube/extensions
     networks:
       - jenkins-network
+
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.12.2
-    container_name: elasticsearch
     environment:
       - discovery.type=single-node
       - xpack.security.enabled=false
       - ES_JAVA_OPTS=-Xms512m -Xmx512m
     ports:
       - "9200:9200"
-    networks:
-      - jenkins-network
     volumes:
       - elasticsearch-data:/usr/share/elasticsearch/data
+    networks:
+      - jenkins-network
+  logstash:
+    image: docker.elastic.co/logstash/logstash:8.12.2
+    depends_on:
+      - elasticsearch
+    ports:
+      - "5044:5044"   # input beats (optional)
+      - "5000:5000"   # input tcp (we'll use this)
+    volumes:
+      - ./logstash/pipeline:/usr/share/logstash/pipeline:ro
+    networks:
+      - jenkins-network
 
   kibana:
     image: docker.elastic.co/kibana/kibana:8.12.2
-    container_name: kibana
     depends_on:
       - elasticsearch
     ports:
@@ -95,3 +111,4 @@ volumes:
   sonarqube-logs:
   sonarqube-extensions:
   elasticsearch-data:
+
