--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,11 @@
             <scope>runtime</scope>
         </dependency>
 
+		<dependency>
+			<groupId>net.logstash.logback</groupId>
+			<artifactId>logstash-logback-encoder</artifactId>
+			<version>7.4</version>
+		</dependency>
 
         <dependency>
 			<groupId>org.springframework.boot</groupId>
