--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,40 @@ services:
       timeout: 5s
       retries: 5
 
+  # ========================
+
+  keycloak-db:
+    image: postgres:17
+    container_name: keycloak-db
+    environment:
+      POSTGRES_DB: keycloak
+      POSTGRES_USER: keycloak
+      POSTGRES_PASSWORD: keycloak
+    networks:
+      - jenkins-network
+    volumes:
+      - keycloak-db-data:/var/lib/postgresql/data
+
+  # ========================
+
+  keycloak:
+    image: quay.io/keycloak/keycloak:26.0.7
+    container_name: keycloak
+    command: start-dev
+    environment:
+      KEYCLOAK_ADMIN: admin
+      KEYCLOAK_ADMIN_PASSWORD: admin
+      KC_DB: postgres
+      KC_DB_URL: jdbc:postgresql://keycloak-db:5432/keycloak
+      KC_DB_USERNAME: keycloak
+      KC_DB_PASSWORD: keycloak
+    ports:
+      - "8088:8080"
+    depends_on:
+      - keycloak-db
+    networks:
+      - jenkins-network
+
   jenkins:
     build:
       context: .
@@ -66,3 +100,4 @@ volumes:
   sonarqube-data:
   sonarqube-logs:
   sonarqube-extensions:
+  keycloak-db-data:
