--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.password=1234
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8088/realms/logistics-realm
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8088/realms/logistics-realm/protocol/openid-connect/certs
