--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,84 +1,61 @@
+version: "3.9"
+
 services:
-  my-postgres:
+  spring-app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: spring-app
+    depends_on:
+      postgres:
+        condition: service_healthy
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/digital_logistics
+      - SPRING_DATASOURCE_USERNAME=postgres
+      - SPRING_DATASOURCE_PASSWORD=1234
+
+      - JWT_SECRET=superSecretKeyThatIsLongEnoughForHS256AlgorithmAndMustBeAtLeast256BitsLong12345
+    ports:
+      - "9090:8080"
+    networks:
+      - jenkins-network
+  postgres:
     image: postgres:17
-    container_name: my-postgres
     environment:
       POSTGRES_DB: digital_logistics
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: 1234
     ports:
       - "5432:5432"
-    networks:
-      - jenkins-network
     volumes:
       - postgres-data:/var/lib/postgresql/data
+    networks:
+      - jenkins-network
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 10s
       timeout: 5s
       retries: 5
 
-  # ========================
-
-  keycloak-db:
-    image: postgres:17
-    container_name: keycloak-db
-    environment:
-      POSTGRES_DB: keycloak
-      POSTGRES_USER: keycloak
-      POSTGRES_PASSWORD: keycloak
-    networks:
-      - jenkins-network
-    volumes:
-      - keycloak-db-data:/var/lib/postgresql/data
-
-  # ========================
-
-  keycloak:
-    image: quay.io/keycloak/keycloak:26.0.7
-    container_name: keycloak
-    command: start-dev
-    environment:
-      KEYCLOAK_ADMIN: admin
-      KEYCLOAK_ADMIN_PASSWORD: admin
-      KC_DB: postgres
-      KC_DB_URL: jdbc:postgresql://keycloak-db:5432/keycloak
-      KC_DB_USERNAME: keycloak
-      KC_DB_PASSWORD: keycloak
-    ports:
-      - "8088:8080"
-    depends_on:
-      - keycloak-db
-    networks:
-      - jenkins-network
-
   jenkins:
-    build:
-      context: .
-      dockerfile: Dockerfile.jenkins
-    container_name: my-jenkins
+    image: jenkins/jenkins:lts
     privileged: true
     user: root
     environment:
       - JENKINS_OPTS=--httpPort=8080
-      - JAVA_OPTS=-Djenkins.install.runSetupWizard=false
     ports:
-      - "9090:8080"
+      - "9091:8080"
       - "50000:50000"
+    volumes:
+      - jenkins-data:/var/jenkins_home
+      - /var/run/docker.sock:/var/run/docker.sock
     networks:
       - jenkins-network
-    volumes:
-      - /home/yassine/.docker/desktop/docker.sock:/var/run/docker.sock
-      - jenkins-data:/var/jenkins_home
-    depends_on:
-      my-postgres:
-        condition: service_healthy
-      sonarqube:
-        condition: service_started
 
   sonarqube:
     image: sonarqube:community
-    container_name: sonarqube
     environment:
       - SONAR_ES_BOOTSTRAP_CHECKS_DISABLE=true
     ports:
@@ -87,6 +64,39 @@ services:
       - sonarqube-data:/opt/sonarqube/data
       - sonarqube-logs:/opt/sonarqube/logs
       - sonarqube-extensions:/opt/sonarqube/extensions
+    networks:
+      - jenkins-network
+
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.12.2
+    environment:
+      - discovery.type=single-node
+      - xpack.security.enabled=false
+      - ES_JAVA_OPTS=-Xms512m -Xmx512m
+    ports:
+      - "9200:9200"
+    volumes:
+      - elasticsearch-data:/usr/share/elasticsearch/data
+    networks:
+      - jenkins-network
+  logstash:
+    image: docker.elastic.co/logstash/logstash:8.12.2
+    depends_on:
+      - elasticsearch
+    ports:
+      - "5044:5044"   # input beats (optional)
+      - "5000:5000"   # input tcp (we'll use this)
+    volumes:
+      - ./logstash/pipeline:/usr/share/logstash/pipeline:ro
+    networks:
+      - jenkins-network
+
+  kibana:
+    image: docker.elastic.co/kibana/kibana:8.12.2
+    depends_on:
+      - elasticsearch
+    ports:
+      - "5601:5601"
     networks:
       - jenkins-network
 
@@ -100,4 +110,4 @@ volumes:
   sonarqube-data:
   sonarqube-logs:
   sonarqube-extensions:
-  keycloak-db-data:
+  elasticsearch-data:
