--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+#APP Configuration Properties
 spring.application.name=digitale_logistic
 spring.datasource.url=jdbc:postgresql://localhost:5432/digital_logistics
 spring.datasource.username=postgres
