--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,113 +1,89 @@
-version: "3.9"
-
 services:
-  spring-app:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: spring-app
-    depends_on:
-      postgres:
-        condition: service_healthy
-    environment:
-      - SPRING_PROFILES_ACTIVE=docker
 
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/digital_logistics
-      - SPRING_DATASOURCE_USERNAME=postgres
-      - SPRING_DATASOURCE_PASSWORD=1234
-
-      - JWT_SECRET=superSecretKeyThatIsLongEnoughForHS256AlgorithmAndMustBeAtLeast256BitsLong12345
-    ports:
-      - "9090:8080"
-    networks:
-      - jenkins-network
   postgres:
     image: postgres:17
+    container_name: postgres
     environment:
       POSTGRES_DB: digital_logistics
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: 1234
     ports:
       - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 10s
+      retries: 5
     volumes:
       - postgres-data:/var/lib/postgresql/data
     networks:
       - jenkins-network
+
+
+  keycloak-db:
+    image: postgres:17
+    container_name: keycloak-db
+    environment:
+      POSTGRES_DB: keycloak
+      POSTGRES_USER: keycloak
+      POSTGRES_PASSWORD: keycloak
+    volumes:
+      - keycloak-db-data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      test: ["CMD-SHELL", "pg_isready -U keycloak"]
       interval: 10s
       timeout: 5s
       retries: 5
-
-  jenkins:
-    image: jenkins/jenkins:lts
-    privileged: true
-    user: root
-    environment:
-      - JENKINS_OPTS=--httpPort=8080
-    ports:
-      - "9091:8080"
-      - "50000:50000"
-    volumes:
-      - jenkins-data:/var/jenkins_home
-      - /var/run/docker.sock:/var/run/docker.sock
     networks:
       - jenkins-network
 
-  sonarqube:
-    image: sonarqube:community
-    environment:
-      - SONAR_ES_BOOTSTRAP_CHECKS_DISABLE=true
-    ports:
-      - "9000:9000"
-    volumes:
-      - sonarqube-data:/opt/sonarqube/data
-      - sonarqube-logs:/opt/sonarqube/logs
-      - sonarqube-extensions:/opt/sonarqube/extensions
-    networks:
-      - jenkins-network
 
-  elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:8.12.2
+  keycloak:
+    image: quay.io/keycloak/keycloak:26.0.7
+    container_name: keycloak
+    command: start-dev --hostname-strict=false
     environment:
-      - discovery.type=single-node
-      - xpack.security.enabled=false
-      - ES_JAVA_OPTS=-Xms512m -Xmx512m
+      KEYCLOAK_ADMIN: admin
+      KEYCLOAK_ADMIN_PASSWORD: admin
+      KC_DB: postgres
+      KC_DB_URL: jdbc:postgresql://keycloak-db:5432/keycloak
+      KC_DB_USERNAME: keycloak
+      KC_DB_PASSWORD: keycloak
+      KC_HOSTNAME_URL: http://localhost:8088
+      KC_HOSTNAME_ADMIN_URL: http://localhost:8088
+      KC_HOSTNAME_STRICT_BACKCHANNEL: false
     ports:
-      - "9200:9200"
-    volumes:
-      - elasticsearch-data:/usr/share/elasticsearch/data
-    networks:
-      - jenkins-network
-  logstash:
-    image: docker.elastic.co/logstash/logstash:8.12.2
+      - "8088:8080"
     depends_on:
-      - elasticsearch
-    ports:
-      - "5044:5044"   # input beats (optional)
-      - "5000:5000"   # input tcp (we'll use this)
-    volumes:
-      - ./logstash/pipeline:/usr/share/logstash/pipeline:ro
+      keycloak-db:
+        condition: service_healthy
     networks:
       - jenkins-network
 
-  kibana:
-    image: docker.elastic.co/kibana/kibana:8.12.2
+
+  spring-app:
+    build: .
+    container_name: spring-app
     depends_on:
-      - elasticsearch
+      postgres:
+        condition: service_healthy
+      keycloak:
+        condition: service_started
+    environment:
+      SPRING_PROFILES_ACTIVE: docker
+      SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_JWK_SET_URI: http://keycloak:8080/realms/logistics-realm/protocol/openid-connect/certs
+      SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_ISSUER_URI: http://localhost:8088/realms/logistics-realm
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/digital_logistics
+      SPRING_DATASOURCE_USERNAME: postgres
+      SPRING_DATASOURCE_PASSWORD: 1234
     ports:
-      - "5601:5601"
+      - "9090:8080"
     networks:
       - jenkins-network
+
+volumes:
+  postgres-data:
+  keycloak-db-data:
 
 networks:
   jenkins-network:
     driver: bridge
-
-volumes:
-  postgres-data:
-  jenkins-data:
-  sonarqube-data:
-  sonarqube-logs:
-  sonarqube-extensions:
-  elasticsearch-data:
