--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,14 @@
-#APP Configuration Properties
 spring.application.name=digitale_logistic
-spring.datasource.url=jdbc:postgresql://localhost:5432/digital_logistics
+
+spring.datasource.url=jdbc:postgresql://postgres:5432/digital_logistics
 spring.datasource.username=postgres
 spring.datasource.password=1234
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://keycloak:8080/realms/logistics-realm/protocol/openid-connect/certs
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8088/realms/logistics-realm
-spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8088/realms/logistics-realm/protocol/openid-connect/certs
+
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.web=INFO
